fix: copy the address can show the right page

--- a/views/short.handlebars
+++ b/views/short.handlebars
@@ -4,13 +4,14 @@
     <h1>Success!Please use this link:</h1>
   </div>
   <div>
-    <a id="hyper-value" style="font-size: 35px; text-decoration:none;" href="{{urlShort.address}}">{{urlShort.shortURL}}</a>
+    <a id="hyper-value" style="font-size: 35px; text-decoration:none;"
+      href="{{urlShort.address}}">http://localhost:3000/{{urlShort.shortURL}}</a>
   </div>
   <button id="copy" onclick="copyFunction()" style="margin-top: 30px;" type="button" class="btn btn-primary">Copy</button>
   <script>
     function copyFunction() {
-    const hyperValue = document.querySelector("#hyper-value")
-    navigator.clipboard.writeText(hyperValue.innerText)
+      const hyperValue = document.querySelector("#hyper-value")
+      navigator.clipboard.writeText(hyperValue.innerText)
         .then(() => alert('已複製'))
         .catch(error => console.log(error))
     }
@@ -22,7 +23,7 @@
     <h1>Success!Please use this link:</h1>
   </div>
   <div>
-    <a id="hyper-value" style="font-size: 35px; text-decoration:none;" href={{ address }}>{{ shortURL }}</a>
+    <a id="hyper-value" style="font-size: 35px; text-decoration:none;" href={{ address }}>http://localhost:3000/{{ shortURL }}</a>
   </div>
   <button id="copy" onclick="copyFunction()" style="margin-top: 30px;" type="button" class="btn btn-primary">Copy</button>
   <script>
